# qt-web-search

./: .gitignore  CMakeLists.txt  README.MD
cmake/: clangformat.cmake
include/: Controller.h  Worker.h  concurrent_queue.h  controller.h  downloader.h  profile.h  thread_safe_queue.h  url_searcher.h  utils.h  web_search_result.h  worker.h
include/url_utils/: downloader.h  url_searcher.h
profiler/: CMakeLists.txt
qml/: main.qml
src/: Controller.cpp  Worker.cpp  controller.cpp  downloader.cpp  main.cpp  url_searcher.cpp  web_search_result.cpp  worker.cpp
test/: CMakeLists.txt  test_runner.h  url_searcher_test.cpp
test/catch2/: CMakeLists.txt
test/catch2/include/: catch2.hpp
tests/: profile.h
url_utils/: CMakeLists.txt
url_utils/include/: url_searcher.h
url_utils/src/: downloader.cpp  url_searcher.cpp
